fix: changed movie model
